--- a/ZazBoy/UI/Controls/MemoryInspectorControls/InspectorCategoryControl.axaml
+++ b/ZazBoy/UI/Controls/MemoryInspectorControls/InspectorCategoryControl.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="ZazBoy.UI.Controls.MemoryInspectorControls.MemoryCategoryControl">
+             x:Class="ZazBoy.UI.Controls.MemoryInspectorControls.InspectorCategoryControl">
   
   <Grid Name="MemoryBlock" RowDefinitions="*,9*">
     <Grid Name="MemoryBlockHeader" Grid.Row="0" ColumnDefinitions="*,15*">
