--- a/ZazBoy/UI/MainWindow.axaml
+++ b/ZazBoy/UI/MainWindow.axaml
@@ -22,7 +22,14 @@
             MaterialOpacity="0.65" />
       </ExperimentalAcrylicBorder.Material>
     </ExperimentalAcrylicBorder>
-    <views:EmulatorControl Name="EmulatorControl"/>
+    <Grid ColumnDefinitions="3*,17*">
+      <Panel Background="Black" Opacity="0.5" Grid.Column="0"></Panel>
+      <views:NavBar Name="NavBar" Grid.Column="0"/>
+      <Panel Background="#252525" Opacity="1" Grid.Column="1"></Panel>
+      <Panel Name="ContentHolder" Grid.Column="1">
+        <views:EmulatorControl Name="EmulatorControl"/>
+      </Panel>
+    </Grid>
     <Panel Name="DialogShade" Background="Black" Opacity="0.4"></Panel>
   </Panel>
 </Window>
