Add tab changing

--- a/ZazBoy/UI/BreakpointManager.axaml
+++ b/ZazBoy/UI/BreakpointManager.axaml
@@ -1,34 +1,17 @@
-<Window xmlns="https://github.com/avaloniaui"
+<UserControl xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:converters="clr-namespace:ZazBoy.UI.Converters;assembly=ZazBoy"
         xmlns:controls="clr-namespace:ZazBoy.UI.Controls"
         mc:Ignorable="d" d:DesignWidth="600" d:DesignHeight="300"
-        x:Class="ZazBoy.UI.BreakpointManager"
-        Width="600"
-        Height="300"
-        CanResize="False"
-        TransparencyLevelHint="AcrylicBlur"
-        Background="Transparent"
-        ExtendClientAreaToDecorationsHint="False"
-        ExtendClientAreaTitleBarHeightHint="-1">
-  
-  <Window.Resources>
+        x:Class="ZazBoy.UI.BreakpointManager">
+
+  <UserControl.Resources>
     <converters:ScaleConverter x:Key="scaleConverter"/>
-  </Window.Resources>
+  </UserControl.Resources>
   
     <Panel>
-     <ExperimentalAcrylicBorder IsHitTestVisible="False">
-      <ExperimentalAcrylicBorder.Material>
-        <ExperimentalAcrylicMaterial
-            BackgroundSource="Digger"
-            TintColor="Black"
-            TintOpacity="1"
-            MaterialOpacity="0.65" />
-      </ExperimentalAcrylicBorder.Material>
-    </ExperimentalAcrylicBorder>
-      
      <Grid Name="BreakpointsRoot" ColumnDefinitions="*,2*" RowDefinitions="*">
       <Grid Name="ButtonsGrid" Margin="10,0,10,0" ColumnDefinitions="*" RowDefinitions="*,Auto,*" Height="{Binding Bounds.Height, ElementName=BreakpointsRoot}">
         <Button Name="AddButton" Grid.Row="0" Width="{Binding Bounds.Width, ElementName=ButtonsGrid}" Height="{Binding Bounds.Height, ElementName=ButtonsGrid, Converter={StaticResource scaleConverter}, ConverterParameter=0.25}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">Add</Button>
@@ -43,4 +26,4 @@
     </Grid>
   </Panel>
 
-</Window>
+</UserControl>
