--- a/ZazBoy/UI/BreakpointManager.axaml
+++ b/ZazBoy/UI/BreakpointManager.axaml
@@ -13,10 +13,14 @@
   
     <Panel>
      <Grid Name="BreakpointsRoot" ColumnDefinitions="*,2*" RowDefinitions="*">
-      <Grid Name="ButtonsGrid" Margin="10,0,10,0" ColumnDefinitions="*" RowDefinitions="*,Auto,*" Height="{Binding Bounds.Height, ElementName=BreakpointsRoot}">
-        <Button Name="AddButton" Grid.Row="0" Width="{Binding Bounds.Width, ElementName=ButtonsGrid}" Height="{Binding Bounds.Height, ElementName=ButtonsGrid, Converter={StaticResource scaleConverter}, ConverterParameter=0.25}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">Add</Button>
-        <TextBox Name="DataTextBox" Grid.Row="1"></TextBox>
-        <Button Name="RemoveButton" Grid.Row="2" Width="{Binding Bounds.Width, ElementName=ButtonsGrid}" Height="{Binding Bounds.Height, ElementName=ButtonsGrid, Converter={StaticResource scaleConverter}, ConverterParameter=0.25}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">Remove</Button>
+      <Grid Name="ButtonsGrid" Margin="10,0,10,0" ColumnDefinitions="*" RowDefinitions="*,Auto,Auto,Auto,*" Height="{Binding Bounds.Height, ElementName=BreakpointsRoot, Converter={StaticResource scaleConverter}, ConverterParameter=0.4}}">
+        <TextBlock Grid.Row="1">Breakpoint Address:</TextBlock>
+        <TextBox Name="DataTextBox" Grid.Row="2"></TextBox>
+        <Grid Grid.Row="3" Margin="0,10,0,0" ColumnDefinitions="*,*" Width="{Binding Bounds.Width, ElementName=ButtonsGrid}">
+          <Button Name="AddButton" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="{Binding Bounds.Width, ElementName=AddButton, Converter={StaticResource scaleConverter}, ConverterParameter=0.3}}">Add</Button>
+          <Button Name="RemoveButton" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Height="{Binding Bounds.Width, ElementName=RemoveButton, Converter={StaticResource scaleConverter}, ConverterParameter=0.3}}">Remove</Button>
+        </Grid>
+
       </Grid>
       <Border Grid.Column="1" Background="#252525" BorderBrush="Black" BorderThickness="4">
         <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
