--- a/ZazBoy/UI/MainWindow.axaml
+++ b/ZazBoy/UI/MainWindow.axaml
@@ -27,6 +27,7 @@
       <Panel Background="#252525" Opacity="1" Grid.Column="1"></Panel>
       <Panel Name="ContentHolder" Grid.Column="1">
       </Panel>
+      <views:EmulatorDisabledNotice Name="EmulatorDisabledNotice" Grid.Column="1"></views:EmulatorDisabledNotice>
     </Grid>
     <Panel Name="DialogShade" Background="Black" Opacity="0.4"></Panel>
   </Panel>
