--- a/ZazBoy/UI/Controls/Pipeline/InstructionEditor.axaml
+++ b/ZazBoy/UI/Controls/Pipeline/InstructionEditor.axaml
@@ -1,18 +1,11 @@
-<Window xmlns="https://github.com/avaloniaui"
+<UserControl xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="140"
-        x:Class="ZazBoy.UI.InstructionEditor"
+        x:Class="ZazBoy.UI.Controls.PipelineControls.InstructionEditor"
         xmlns:controls="clr-namespace:ZazBoy.UI.Controls"
-        Name="InstructionEditor"
-        Width="400"
-        Height="140"
-        CanResize="False"
-        TransparencyLevelHint="AcrylicBlur"
-        Background="Transparent"
-        ExtendClientAreaToDecorationsHint="False"
-        ExtendClientAreaTitleBarHeightHint="-1">
+        Name="InstructionEditor">
 
   <Panel>
     <ExperimentalAcrylicBorder IsHitTestVisible="False">
@@ -43,4 +36,4 @@
       </Border>
     </Canvas>
   </Panel>
-</Window>
+</UserControl>
