--- a/ZazBoy/UI/EmulatorInterface.axaml
+++ b/ZazBoy/UI/EmulatorInterface.axaml
@@ -3,9 +3,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:converters="clr-namespace:ZazBoy.UI.Converters;assembly=ZazBoy"
+             xmlns:controls="clr-namespace:ZazBoy.UI.Controls"
              mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="720"
-             Name="EmulatorControl"
-             x:Class="ZazBoy.UI.Controls.EmulatorControl"
+             Name="EmulatorInterface"
+             x:Class="ZazBoy.UI.EmulatorInterface"
              Margin="0"
              Focusable="True">
   
@@ -14,7 +15,7 @@
   </UserControl.Resources>
 
   <Panel>
-    <Grid Name="EmulatorRoot" ColumnDefinitions="2*" RowDefinitions="2*" Height="{Binding Bounds.Height, ElementName=EmulatorControl}" Width="{Binding Bounds.Width, ElementName=EmulatorControl}">
+    <Grid Name="EmulatorRoot" ColumnDefinitions="2*" RowDefinitions="2*" Height="{Binding Bounds.Height, ElementName=EmulatorInterface}" Width="{Binding Bounds.Width, ElementName=EmulatorInterface}">
       <DockPanel Grid.Column="0" Grid.Row="0" Name="EmulatorView" Margin="0,5,0,5">
         <Image Name="LCD" DockPanel.Dock="Top" MinWidth="160" MinHeight="144" MaxHeight="{Binding Bounds.Height, ElementName=EmulatorView, Converter={StaticResource scaleConverter}, ConverterParameter=0.95}"></Image>
         <Grid Name="ButtonGrid" DockPanel.Dock="Bottom" VerticalAlignment="Top" HorizontalAlignment="Center" Width="{Binding Bounds.Width, ElementName=LCD}" Height="{Binding Bounds.Height, ElementName=EmulatorView, Converter={StaticResource scaleConverter}, ConverterParameter=0.05}">
@@ -33,7 +34,8 @@
         </Grid>
       </DockPanel>
     </Grid>
-    <Panel Name="CartridgeSelectPanel" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Black" Opacity="0.75">
+    <Panel Name="CartridgeSelectPanel" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+      <Panel Background="Black" Opacity="0.8"></Panel>
       <Button Name="CartridgeButton" Opacity="1.0" HorizontalAlignment="Center" VerticalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="{Binding Bounds.Width, ElementName=LCD, Converter={StaticResource scaleConverter}, ConverterParameter=0.4}" Height="{Binding Bounds.Height, ElementName=LCD, Converter={StaticResource scaleConverter}, ConverterParameter=0.1}">Select Cartridge</Button>
     </Panel>
   </Panel>
