--- a/ZazBoy/UI/NavBar.axaml
+++ b/ZazBoy/UI/NavBar.axaml
@@ -4,8 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:converters="clr-namespace:ZazBoy.UI.Converters;assembly=ZazBoy"
              xmlns:controls="clr-namespace:ZazBoy.UI.Controls"
+             xmlns:navBar="clr-namespace:ZazBoy.UI.Controls.NavBarControls"
              mc:Ignorable="d" d:DesignWidth="200" d:DesignHeight="450"
-             x:Class="ZazBoy.UI.Controls.NavBar"
+             x:Class="ZazBoy.UI.NavBar"
              Name="NavBar">
 
   <UserControl.Resources>
@@ -21,10 +22,10 @@
     </Grid>
     <Panel Grid.Row="1" Height="{Binding Bounds.Height, ElementName=NavBar, Converter={StaticResource scaleConverter}, ConverterParameter=0.1}"></Panel>
     <Grid Grid.Row="2" Name="TabGrid" RowDefinitions="Auto,Auto,Auto,Auto">
-      <controls:NavBarItem Name="EmulatorTabButton" Grid.Row="0" Height="{Binding Bounds.Height, ElementName=NavBar, Converter={StaticResource scaleConverter}, ConverterParameter=0.075}"/>
-      <controls:NavBarItem Name="BreakpointsTabButton" Grid.Row="1" Height="{Binding Bounds.Height, ElementName=NavBar, Converter={StaticResource scaleConverter}, ConverterParameter=0.075}"/>
-      <controls:NavBarItem Name="PipelineTabButton" Grid.Row="2" Height="{Binding Bounds.Height, ElementName=NavBar, Converter={StaticResource scaleConverter}, ConverterParameter=0.075}"/>
-      <controls:NavBarItem Name="InspectorTabButton" Grid.Row="3" Height="{Binding Bounds.Height, ElementName=NavBar, Converter={StaticResource scaleConverter}, ConverterParameter=0.075}"/>
+      <navBar:NavBarItem Name="EmulatorTabButton" Grid.Row="0" Height="{Binding Bounds.Height, ElementName=NavBar, Converter={StaticResource scaleConverter}, ConverterParameter=0.075}"/>
+      <navBar:NavBarItem Name="BreakpointsTabButton" Grid.Row="1" Height="{Binding Bounds.Height, ElementName=NavBar, Converter={StaticResource scaleConverter}, ConverterParameter=0.075}"/>
+      <navBar:NavBarItem Name="PipelineTabButton" Grid.Row="2" Height="{Binding Bounds.Height, ElementName=NavBar, Converter={StaticResource scaleConverter}, ConverterParameter=0.075}"/>
+      <navBar:NavBarItem Name="InspectorTabButton" Grid.Row="3" Height="{Binding Bounds.Height, ElementName=NavBar, Converter={StaticResource scaleConverter}, ConverterParameter=0.075}"/>
     </Grid>
   </Grid>
 </UserControl>
