--- a/ZazBoy/UI/Controls/MemoryInspector/InspectorCategoryItem.axaml
+++ b/ZazBoy/UI/Controls/MemoryInspector/InspectorCategoryItem.axaml
@@ -5,10 +5,10 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="50"
              x:Class="ZazBoy.UI.Controls.MemoryInspectorControls.InspectorCategoryItem">
   
-  <Border BorderBrush="White" BorderThickness="1" CornerRadius="5,5,5,5">
-    <Grid ColumnDefinitions="*,3*">
+  <Border BorderBrush="White" BorderThickness="1" CornerRadius="5,5,5,5" MaxWidth="500">
+    <Grid ColumnDefinitions="*,*" Margin="5,5,5,5">
       <TextBlock Name="TitleBlock" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center">#1234</TextBlock>
-      <TextBox Name="DataBox" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center"></TextBox>
+      <TextBox Name="DataBox" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" Margin="0,0,5,0"></TextBox>
     </Grid>
   </Border>
 </UserControl>
