--- a/ZazBoy/UI/PipelineInspector.axaml
+++ b/ZazBoy/UI/PipelineInspector.axaml
@@ -9,17 +9,17 @@
              mc:Ignorable="d" d:DesignWidth="1200" d:DesignHeight="600"
              x:Class="ZazBoy.UI.PipelineInspector">
 
-  <Grid ColumnDefinitions="2*,*" Margin="20,10,10,10">
+  <Grid ColumnDefinitions="2*,*" Margin="20,10,20,10">
     <Grid Grid.Column="0" RowDefinitions="3*,*">
       <emulator:EmulatorDisplay Name="Display" Grid.Row="0"/>
-      <Border BorderBrush="DarkGray" BorderThickness="1" Margin="5,5,5,5" Background="#141414" Grid.Row="1" HorizontalAlignment="Center" Width="{Binding Bounds.Width, ElementName=Display}">
-        <pipeline:InstructionEditor Margin="10,10,10,10"/>
+      <Border BorderBrush="DarkGray" BorderThickness="0" Margin="5,5,5,5" Background="#141414" Grid.Row="1" HorizontalAlignment="Center" Width="{Binding Bounds.Width, ElementName=Display}">
+        <pipeline:InstructionEditor Name="InstructionEditor" Margin="10,10,10,10"/>
       </Border>
     </Grid>
     <Grid Grid.Column="1" ColumnDefinitions="6*,5,*" RowDefinitions="*,*">
-      <pipeline:OperationQueue Grid.Column="0" Grid.RowSpan="2"/>
-      <Button Grid.Column="2" Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">^</Button>
-      <Button Grid.Column="2" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">^^</Button>
+      <pipeline:OperationQueue Name="InstructionPipeline" Grid.Column="0" Grid.RowSpan="2"/>
+      <Button Name="StepButton" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">^</Button>
+      <Button Name="SkipButton" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">^^</Button>
     </Grid>
   </Grid>
 </UserControl>
