--- a/ZazBoy/UI/Controls/MemoryInspector/InspectorCategoryItem.axaml
+++ b/ZazBoy/UI/Controls/MemoryInspector/InspectorCategoryItem.axaml
@@ -6,9 +6,9 @@
              x:Class="ZazBoy.UI.Controls.MemoryInspectorControls.InspectorCategoryItem">
   
   <Border BorderBrush="White" BorderThickness="1" CornerRadius="5,5,5,5" MaxWidth="500">
-    <Grid ColumnDefinitions="*,*" Margin="5,5,5,5">
+    <Grid ColumnDefinitions="*,*">
       <TextBlock Name="TitleBlock" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center">#1234</TextBlock>
-      <TextBox Name="DataBox" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" Margin="0,0,5,0"></TextBox>
+      <TextBox Name="DataBox" Grid.Column="1" Height="{Binding Bounds.Height, ElementName=Border}" VerticalAlignment="Center" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center"></TextBox>
     </Grid>
   </Border>
 </UserControl>
