--- a/ZazBoy/UI/EmulatorInterface.axaml
+++ b/ZazBoy/UI/EmulatorInterface.axaml
@@ -14,22 +14,18 @@
   </UserControl.Resources>
 
   <Panel>
-    <Grid Name="EmulatorRoot" ColumnDefinitions="2*" RowDefinitions="2*" Height="{Binding Bounds.Height, ElementName=EmulatorInterface}" Width="{Binding Bounds.Width, ElementName=EmulatorInterface}">
+    <Grid Name="EmulatorRoot" ColumnDefinitions="*" RowDefinitions="*">
       <DockPanel Grid.Column="0" Grid.Row="0" Name="EmulatorView" Margin="0,5,0,5">
         <emulatorControls:EmulatorDisplay Name="Display" DockPanel.Dock="Top" MaxHeight="{Binding Bounds.Height, ElementName=EmulatorView, Converter={StaticResource scaleConverter}, ConverterParameter=0.95}"/>
-        <Grid Name="ButtonGrid" DockPanel.Dock="Bottom" VerticalAlignment="Top" HorizontalAlignment="Center" Width="{Binding Bounds.Width, ElementName=Display}" Height="{Binding Bounds.Height, ElementName=EmulatorView, Converter={StaticResource scaleConverter}, ConverterParameter=0.05}">
-          <Canvas Name="PowerCanvas" Margin="10,5,10,5" HorizontalAlignment="Left" Height="{Binding Height, ElementName=ButtonGrid, Converter={StaticResource scaleConverter}, ConverterParameter=0.80}" Width="{Binding Bounds.Width, ElementName=PowerButton}">
+        <Grid Name="ButtonGrid" DockPanel.Dock="Bottom" ColumnDefinitions="*,*" VerticalAlignment="Top" HorizontalAlignment="Center" Width="{Binding Bounds.Width, ElementName=Display}" Height="{Binding Bounds.Height, ElementName=EmulatorView, Converter={StaticResource scaleConverter}, ConverterParameter=0.05}">
+          <Panel Name="PowerCanvas" Grid.Column="0" Margin="0,5,0,5" HorizontalAlignment="Center">
             <Image Name="PowerButton" Height="{Binding Bounds.Height, ElementName=PowerCanvas}"></Image>
             <Image Name="PowerText" Height="{Binding Bounds.Height, ElementName=PowerCanvas}" IsHitTestVisible="False"></Image>
-          </Canvas>
-          <Canvas Name="PauseCanvas" Margin="10,5,10,5" HorizontalAlignment="Center" Height="{Binding Height, ElementName=ButtonGrid, Converter={StaticResource scaleConverter}, ConverterParameter=0.80}" Width="{Binding Bounds.Width, ElementName=PauseButton}">
+          </Panel>
+          <Panel Name="PauseCanvas" Grid.Column="1" Margin="0,5,0,5" HorizontalAlignment="Center">
             <Image Name="PauseButton" Height="{Binding Bounds.Height, ElementName=PauseCanvas}"></Image>
             <Image Name="PauseText" Height="{Binding Bounds.Height, ElementName=PowerCanvas}" IsHitTestVisible="False"></Image>
-          </Canvas>
-          <Canvas Name="DebugCanvas" Margin="10,5,10,5" HorizontalAlignment="Right" Height="{Binding Height, ElementName=ButtonGrid, Converter={StaticResource scaleConverter}, ConverterParameter=0.80}" Width="{Binding Bounds.Width, ElementName=DebugButton}">
-            <Image Name="DebugButton" Height="{Binding Bounds.Height, ElementName=DebugCanvas}"></Image>
-            <Image Name="DebugText" Height="{Binding Bounds.Height, ElementName=PowerCanvas}" IsHitTestVisible="False"></Image>
-          </Canvas>
+          </Panel>
         </Grid>
       </DockPanel>
     </Grid>
